# tva

./: CMakeLists.txt  Doxyfile  README.md
include/: mpc.h  tva.h
include/core/communication/: communicator.h  mpi_communicator.h
include/core/containers/: a_shared_vector.h  b_shared_vector.h  e_vector.h  encoded_vector.h  shared_vector.h  vector.h  vector_cache.h  vector_data.h
include/core/operators/: aggregation.h  common.h  operators.h  relational.h  sorting.h  streaming.h
include/core/protocols/: fantastic_4pc.h  protocol.h  replicated_3pc.h
include/core/random/: pseudo_random_generator.h  random_generator.h
include/debug/: debug.h
include/relational/: encoded_column.h  encoded_table.h  shared_column.h
include/service/: service.h
include/service/common/: runtime.h  task.h
include/service/mpi/: setup.h
results/lan/: cloud-mal-results.txt  cloud-semi-results.txt  energy-mal-results.txt  energy-semi-results.txt  medical-mal-results.txt  medical-semi-results.txt
results/wan/: cloud-mal-results.txt  cloud-semi-results.txt  energy-mal-results.txt  energy-semi-results.txt  medical-mal-results.txt  medical-semi-results.txt  waldo_energy_query-mal-results.txt  waldo_energy_query-semi-results.txt  waldo_table_equality-mal-results.txt  waldo_table_equality-semi-results.txt  waldo_table_greater-mal-results.txt  waldo_table_greater-semi-results.txt
scripts/: build_experiments.sh  cloud.sh  energy.sh  medical.sh  micro_aggregation.sh  micro_boolean_addition.sh  micro_primitives.sh  micro_session_gap.sh  micro_session_threshold.sh  micro_sorting.sh  micro_tumbling.sh  run_experiments.sh  run_tests.sh  setup.sh  utils.sh  waldo_energy_query.sh  waldo_table_equality.sh  waldo_table_greater.sh  waldo_wan.sh
src/: main.cpp
src/micro/: micro_aggregation.cpp  micro_boolean_addition.cpp  micro_primitives.cpp  micro_session_gap.cpp  micro_session_threshold.cpp  micro_sorting.cpp  micro_tumbling.cpp
src/queries/: cloud.cpp  energy.cpp  medical.cpp  waldo_energy_query.cpp  waldo_table_equality.cpp  waldo_table_greater.cpp
tests/: test_bitonic_sort.cpp  test_comparisons.cpp  test_computation_library.cpp  test_count_wrong_div.cpp  test_operators.cpp  test_primitives.cpp  test_runtime.cpp
